--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title> aaaaaa </title>
 </head>
 <body>
-here is some text
+<h1>here is some text</h1>
+<h2><p>here is some <b>more</b> <i>text</i></h2></p>
+<h1>heres a third bit of text</h1>
 </body>
 </html>
