edited index further

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 <body>
 <h1>here is some text</h1>
 <h2><p>here is some <b>more</b> <i>text</i></h2></p>
-<h1>heres a third bit of text</h1>
+<h1><p>heres a third bit of <a href="http://somelinkhere.com">text</a></li></p></h1>
+<ol>
+<li>this</li>
+<li>is</li>
+<li>an ordered list</li>
+</ol>
+<ul>
+<li>This</li>
+<li>is</li>
+<li>an unordered <a href="http://somelinkhere.com">list</a></li>
+</ul>
 </body>
 </html>
