edited index even further

--- a/index.html
+++ b/index.html
@@ -17,5 +17,21 @@
 <li>is</li>
 <li>an unordered <a href="http://somelinkhere.com">list</a></li>
 </ul>
+ <img src="https://avatars1.githubusercontent.com/u/21364439?v=3&s=40" width="256" height="256" alt="an image">
+
+<table>
+<tr>
+<td>aaaa</td>
+<td>aaaa</td>
+</tr>
+<tr>
+<td>bbbb</td>
+<td>bbbb</td>
+</tr>
+<tr>
+<td>cccc</td>
+<td>cccc</td>
+</tr>
+</table>
 </body>
 </html>
