edited index to conform with assignment, added style.css

--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title> aaaaaa </title>
+<head><link rel="stylesheet" href="style.css">
+<title>Sunnyside Diner - Breakfast Menu </title>
 </head>
 <body>
-<h1>here is some text</h1>
-<h2><p>here is some <b>more</b> <i>text</i></h2></p>
-<h1><p>heres a third bit of <a href="http://somelinkhere.com">text</a></li></p></h1>
+<style>
+		td {
+	border: 5px solid #999;
+	padding: 0.1em 1em;
+}
+</style>
+<h1>The Sunnyside Diner - Breakfast Menu</h1>
+<h2>Open 8AM-1AM everyday!</h2>
+<h1>Breakfast Menu</h1> 
+see our lunch menu <a href="http://somelinkhere.com">here</a></li></br>
 <ol>
-<li>this</li>
-<li>is</li>
-<li>an ordered list</li>
-</ol>
-<ul>
-<li>This</li>
-<li>is</li>
-<li>an unordered <a href="http://somelinkhere.com">list</a></li>
-</ul>
- <img src="https://avatars1.githubusercontent.com/u/21364439?v=3&s=40" width="256" height="256" alt="an image">
-
+<h2>Omelettes</h2>
+<li><b>Western Omelet</b> -------------------------------------------------------------- 5.99</li>
+<li><b>Ham w/ Cheese Omelet</b> ---------------------------------------------------- 6.99</li>
+<li><b>Feta /w Spinach Omelet</b> ---------------------------------------------------- 6.99</li>
+<li><b>Build-Your-Own Omelet</b> (Choose any two ingredients below) --- 6.99</li>
 <table>
 <tr>
-<td>aaaa</td>
-<td>aaaa</td>
+<td>Bacon</td>
+<td>Ham</td>
+<td>Sausage Patty</td>
 </tr>
 <tr>
-<td>bbbb</td>
-<td>bbbb</td>
+<td>Sausage Link</td>
+<td>Onion</td>
+<td>Peppers</td>
 </tr>
 <tr>
-<td>cccc</td>
-<td>cccc</td>
+<td>Mushroom</td>
+<td>Tomato & Cheese</td>
+<td>Churriso</td>
 </tr>
 </table>
+<p>($0.75 for every additional choice)</p>
+ <img src="http://i.imgur.com/TRPJ7pd.jpg" width="384" height="256" alt="an image">
+</ol>
+
 </body>
 </html>
